--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,10 @@ neogradle.subsystems.parchment.minecraftVersion=1.20.2
 neogradle.subsystems.parchment.mappingsVersion=2023.12.10
 
 minecraft_version=1.20
-minecraft_version_range=[1.20.2)
+minecraft_version_range=[1.20.2]
 neo_version=20.2.88
-neo_version_range=[20.2.88-beta,)
-loader_version_range=[4,)
+neo_version_range=[20.2.88,)
+loader_version_range=[1,)
 
 ## Mod Properties
 mod_id=slabgen
