--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,26 +8,22 @@ issueTrackerURL="https://github.com/MrUnknown404/SlabGen/issues"
     modId="${mod_id}"
     version="${mod_version}"
     displayName="${mod_name}"
-
     displayURL="https://github.com/MrUnknown404/SlabGen"
     logoFile="icon.png"
     #credits=""
     authors="${mod_authors}"
     description='''${mod_description}'''
 
-#[[mixins]]
-#config="${mod_id}.mixins.json"
-
 [[dependencies.${mod_id}]]
     modId="neoforge"
-    type="required"
+    mandatory=true
     versionRange="${neo_version_range}"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.${mod_id}]]
     modId="minecraft"
-    type="required"
+    mandatory=true
     versionRange="${minecraft_version_range}"
     ordering="NONE"
     side="BOTH"
